# N-Queens-Parallel

./: .gitignore  CMakeLists.txt  Makefile  README.md  commons.cpp  commons.h  instructions.txt
mpi/: n-queens-mpi.cpp  n-queens.cpp
omp/: n-queens-omp.cpp  n-queens.cpp
